--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,39 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Ionic con Angular
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
+
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Lista de personas</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  
+  <ion-card *ngFor="let i of personas">
+  <ion-card-content>
+    <ion-grid>
+      <ion-row>
+      <ion-col>
+          Nombre: <b>{{i.nombre}}</b>  <br>
+          Apellido: <b>{{i.apellidos}}</b><br>
+          Matricula: <b>{{i.matricula}}</b>
+      </ion-col>
+      <ion-col class="foto" >
+        <img src = {{i.image}}/>
+      </ion-col>
+    </ion-row>
+    </ion-grid>
+  </ion-card-content>
+</ion-card> 
+  
+
 </ion-content>
+
+
