--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -4,6 +4,14 @@ ion-card-content {
     
 }
 
+ion-input {
+  border-radius: 10px !important;
+  padding-right: 30px;
+  border: 1px solid white !important;
+  max-width: 700px; 
+}
+
 .foto{
+  max-width: 150px;
   text-align: right;
 }
