practica 5 del 12-mar

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,17 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Vista de Lista
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-list>
+    <ion-item *ngFor="let i of personas"  [routerLink]="['/detalles',i.matricula]">
+      <ion-img [src]="i.image"></ion-img>
+      <ion-label><strong>Nombre: {{i.nombre}}</strong></ion-label>
+    </ion-item>
+  </ion-list>
+  
 </ion-content>
