--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,11 +7,30 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
   <ion-list>
-    <ion-item *ngFor="let i of personas"  [routerLink]="['/detalles',i.matricula]">
+
+    <ion-item-sliding *ngFor="let i of personas"  [routerLink]="['/detalles',i.matricula]">
+      <ion-item-options side="start">
+        <ion-item-option color="danger" expandable>
+          <ion-icon name="trash"></ion-icon>
+          Eliminar
+        </ion-item-option>
+      </ion-item-options>
+
+    <ion-item>
       <ion-img [src]="i.image"></ion-img>
       <ion-label><strong>Nombre: {{i.nombre}}</strong></ion-label>
     </ion-item>
+
+    <ion-item-options side="end">
+      <ion-item-option color="success" expandable>
+        <ion-icon name="bookmark"></ion-icon>
+         Guardar
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+
   </ion-list>
   
 </ion-content>
