--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -31,7 +31,7 @@
     </ion-col>
   </ion-row>
 </ion-grid>
-<ion-button type="submit">Agregar alumno</ion-button>
+<ion-button type="submit">Agregar Persona</ion-button>
 </form>
 
 </ion-content>
