--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,15 +9,14 @@
 <ion-content [fullscreen]="true">
 
   <ion-list>
-
-    <ion-item-sliding *ngFor="let i of personas">
+    <div *ngFor="let i of personas; trackBy: track_matricula;">
+    <ion-item-sliding *ngIf="card_validation(i)">
       <ion-item-options side="start">
         <ion-item-option color="danger" (click)="eliminar(i)" expandable>
           <ion-icon name="trash"></ion-icon>
           Eliminar
         </ion-item-option>
       </ion-item-options>
-
 
 
     <ion-item  [routerLink]="['/detalles',i.matricula]">
@@ -33,26 +32,20 @@
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
-
+</div>
   </ion-list>
   
     <ion-grid *ngIf="editando">
       <ion-row>
         Ingrese un nombre:
         <ion-col>
-          <ion-input placeholder="Ej: Cheems" [(ngModel)]="newnombre" name="name">{{newpersona.nombre}}</ion-input>
+          <ion-input placeholder="Ej: Cheems" [(ngModel)]="newnombre" name="name"></ion-input>
         </ion-col>
       </ion-row>
       <ion-row>
         Ingrese un apellido:
         <ion-col>
-          <ion-input placeholder="Ej: Martinez Martinez Salas Salas" [(ngModel)]="newapellidos" name="lastname">{{newpersona.apellidos}}</ion-input>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        Ingrese un matricula:
-        <ion-col>
-          <ion-input placeholder="Ej: 123456"  [(ngModel)]="newmatricula" name="mat">{{newpersona.matricula}}</ion-input>
+          <ion-input placeholder="Ej: Martinez Martinez Salas Salas" [(ngModel)]="newapellidos" name="lastname"></ion-input>
         </ion-col>
       </ion-row>
       <ion-button (click)="save()">Modificar Persona</ion-button>
