--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -27,7 +27,7 @@
 
     <ion-item-options side="end">
       <ion-item-option color="success" (click)="edit(i)" expandable>
-        <ion-icon name="bookmark"></ion-icon>
+        <ion-icon name="create-outline"></ion-icon>
          Editar 
       </ion-item-option>
     </ion-item-options>
